# love-canteen

./: .gitignore  Cargo.toml
back-juri/: Cargo.toml
back-juri/src/: main.rs
back-juri/src/database/: models.rs  mysql.rs  schema.rs
back-juri/src/shop/: food.rs  menu.rs  mod.rs  order.rs
back-juri/src/user/: login.rs  mod.rs  order.rs
back-juri/src/utils/: ext.rs  log.rs  mod.rs  order.rs  result_response.rs  user.rs
front-leptos/: Cargo.toml  Trunk.toml  index.html
front-leptos/src/: app.rs  main.rs
front-leptos/src/api/: login.rs  mod.rs  net.rs  user.rs
front-leptos/src/api/shop/: food.rs  menu.rs  mod.rs
front-leptos/src/components/: bottom_nav.rs  mod.rs  shop_cart.rs  top_nav.rs
front-leptos/src/model/: mod.rs
front-leptos/src/pages/: home.rs  login.rs  me.rs  mod.rs  order.rs  order_detail.rs
front-leptos/src/pages/cuisine/: menu.rs
front-leptos/src/pages/shop/: add_food.rs  food.rs  menu.rs  mod.rs  shop_vec.rs
front-leptos/src/store/: mod.rs  shop.rs  token.rs
