[package]
name = "back-juri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = [
    "mysql",
    "chrono"
]}
chrono = { version = "0.4.24", features = ["serde"] }
juri = { git = "https://github.com/juri-web/juri", rev = "641c420" }
async-std = { version = "1.12.0", features = ["attributes"] }
jsonwebtoken = { version = "8.3", default-features = false }
bcrypt = "0.14.0"

serde = "1.0.163"
serde_json = "1.0.96"