[package]
name = "front-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = { version = "0.3.0", features = ["csr"] }
leptos_icons = { version = "0.0.12", features = ["AiUserOutlined", "AiBarsOutlined", "AiGroupOutlined"]}
melt-ui = { git = "https://github.com/luoxiaozero/melt-ui.git", rev = "f240560" }
serde = "1.0.163"
gloo-net = "0.2.6"
gloo-storage = "0.2.2"