[package]
name = "front-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", rev = "3d75c71", features = [
    "stable",
] }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", rev = "3d75c71", features = [
    "csr",
] }
leptos_icons = { git = "https://github.com/luoxiaozero/leptos-icons.git", rev = "4fe4417", features = [
    "AiUserOutlined",
    "AiBarsOutlined",
    "AiGroupOutlined",
] }
melt-ui = { git = "https://github.com/luoxiaozero/melt-ui.git", rev = "95a2586" }
serde = "1.0.163"
gloo-net = "0.2.6"
gloo-storage = "0.2.2"
sha3 = "0.10.8"
hex = "0.4.3"
